2013-12-06 Aurelien Degremont <aurelien.degremont@cea.fr>
	* Restore table display for local commands (ticket #172)
	* Restore broken -V disk/target behaviour (ticket #173)

2013-11-05 Florent Thery <florent.thery@bull.net>
	* Do not copy tuning.conf if -L or -R option is specified and handle
	-n and -x options when copying tuning.conf (ticket #168).

2013-10-30 Aurelien Degremont <aurelien.degremont@cea.fr>
	* Fix traceback when adding/removing client with update (ticket #169).

2013-10-09 Aurelien Degremont <aurelien.degremont@cea.fr>
	* Release: 1.3

2013-10-07 Aurelien Degremont <aurelien.degremont@cea.fr>
	* Unload modules only when possible (ticket #167).

2013-10-03 Aurelien Degremont <aurelien.degremont@cea.fr>
	* Fix bad quota tuning options (ticket #148).
	* tuning.conf is also copied when installing (ticket #53).

2013-09-27 Aurelien Degremont <aurelien.degremont@cea.fr>
	* Similar error messages are grouped (ticket #103).
	* Supplementary path for external commands is configurable (ticket #12).

2013-09-24 Aurelien Degremont <aurelien.degremont@cea.fr>
	* -t option supports 'client' option (ticket #164).
	* Fix message output in verbose mode (ticket #163).

2013-09-02 Aurelien Degremont <aurelien.degremont@cea.fr>
	* tuning.conf supports 'router' as node type (ticket #96).
	* Remove code managing FS state in backend (ticket #161).
	* Allow to unregister a FS even with error (ticket #125).

2013-08-29 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Always return an error when format, fsck, tunefs or execute
	failed (ticket #82).
	* umount/mount clients on update only when needed (ticket #152).

2013-08-28 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Clean handling of remote shine output (ticket #25).

2013-08-26 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Automatically load and unload modules when needed (ticket #19).

2013-08-11 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fix exception when syslog is not available (ticket #160).
